--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@
 *{box-sizing: border-box; margin: 0; padding: 0;}
 html{}
 body{background-color: #202020;color: #a3a3a3;}
-.numbers{display: flex;align-content: flex-start;justify-content: center;column-gap: 10px;}
-.numbers input{width: 30px;height: 40px;text-align: center;border: #000d solid 1px;background: #666666;color: #d3d3d3;border-radius: 4px;font-size: 20px;}
-.numbers input:focus-visible{outline: 3px solid #83c7e8; border-color: transparent;}
+.numbers{display: flex;justify-content: center;column-gap: 5px;min-height: calc(100dvh);align-items: center;}
+.numbers input{width: 38px;height: 46px;text-align: center;border: #000d solid 1px;background: #666666;color: #d3d3d3;border-radius: 6px;font-size: 24px;caret-color: transparent;text-transform: uppercase;box-shadow: inset rgb(0 0 0 / 50%) 1px 1px 4px;}
+.numbers input:focus-visible{outline: 3px solid #83d7ffa8;border-color: transparent;}
